--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -116,7 +116,7 @@
     <Compile Include="Assets\Hotfix\Logic\Joystick\Joystick.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Util\Object\ObjectUtil.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Expand\UnityWebRequest\UnityWebRequestExpand.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\GameObject\GameObjectComponent.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\GameObject\GameObjectEntity.cs" />
     <Compile Include="Assets\Hotfix\Logic\Manager\Command\CommandDataType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Config\IConfig.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\NumericEvent\INumericEvent.cs" />
@@ -127,9 +127,10 @@
     <Compile Include="Assets\Hotfix\Logic\Camera\SmoothFoolow2D.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventManager.cs" />
     <Compile Include="Assets\Hotfix\Logic\Manager\Command\CommandData.cs" />
+    <Compile Include="Assets\Hotfix\Logic\Camera\CameraController.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Util\Lcc\LccUtil.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\AObjectBase.cs" />
-    <Compile Include="Assets\Hotfix\Runtime\Core\Object\ObjectBaseFactory.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\Object\EntityFactory.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\View\Binding\ViewModelBinding.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\ObjectBaseEventSystem.cs" />
     <Compile Include="Assets\Hotfix\Logic\Manager\GameData\CVType.cs" />
@@ -141,7 +142,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Config\ConfigManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelManager.cs" />
-    <Compile Include="Assets\Hotfix\Logic\Camera\CameraController.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Init\GameEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Hotfix\Unity.Hotfix.asmdef" />
