单例小问题修改

--- a/Sirenix.OdinInspector.CompatibilityLayer.Editor.csproj
+++ b/Sirenix.OdinInspector.CompatibilityLayer.Editor.csproj
@@ -301,6 +301,9 @@
     <Reference Include="UnityEditor.Graphs">
       <HintPath>C:\Program Files\2020.3.26f1c1\Editor\Data\Managed\UnityEditor.Graphs.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEditor.WebGL.Extensions">
+      <HintPath>C:\Program Files\2020.3.26f1c1\Editor\Data\PlaybackEngines\WebGLSupport\UnityEditor.WebGL.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEditor.Android.Extensions">
       <HintPath>C:\Program Files\2020.3.26f1c1\Editor\Data\PlaybackEngines\AndroidPlayer\UnityEditor.Android.Extensions.dll</HintPath>
     </Reference>
