新UI框架基础完成

--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -128,6 +128,8 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Event\EventType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Config\ConfigManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\PanelManager.cs" />
+    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Top\TopPanel.cs" />
+    <Compile Include="Assets\Hotfix\Logic\UI\Panel\Main\MainPanel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Hotfix\Unity.Hotfix.asmdef" />
