--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.focus-creative-games.hybridclr_unity": "https://gitee.com/focus-creative-games/hybridclr_unity.git",
     "com.ourpalm.ilruntime": "2.1.0",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.collab-proxy": "1.17.1",
