--- a/Assets/Hotfix/Unity.Hotfix.asmdef
+++ b/Assets/Hotfix/Unity.Hotfix.asmdef
@@ -7,9 +7,7 @@
         "GUID:0d1ae7fff56963548a2a2a16dab3c5c6",
         "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
-    "includePlatforms": [
-        "Editor"
-    ],
+    "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": true,
     "overrideReferences": false,
